# twosome

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md
scripts/: test-chat
src/: config.h.in
src/client/: twosome.cpp
src/kernel/net/: chatclient.cpp  chatclient.h  chatserver.cpp  chatserver.h  participant.h  room.h  session.cpp  session.h
src/server/: twosomed.cpp
src/util/: log.h
